[package]
name = "clipboard_viewer"
version = "0.1.0"
authors = ["Allister Isaiah Harvey <a.i.harvey@icloud.com>"]
edition = "2021"
description = "A clipboard viewer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
libc = "0.2.0"
egui = { git = "https://github.com/emilk/egui", branch = "master" }
eframe = { git = "https://github.com/emilk/egui", branch = "master", features = [
    "persistence",
] }
serde = { version = "1.0.147", features = [
    "derive",
] } # You only need this if you want app persistence


# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3.16"

# macOS:
[target.'cfg(target_os = "macos")'.dependencies]
rust-macios = { git = "https://github.com/a-isaiahharvey/rust-macios", branch = "main", default-features = false, features = [
    "appkit",
] }

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
tracing-wasm = "0.2.1"


[profile.release]
opt-level = 2 # fast and small wasm


[patch.crates-io]

# If you want to use the bleeding edge version of egui and eframe:


# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }
