[package]
name = "clipboard_viewer"
version = "0.1.1"
authors = ["Allister Isaiah Harvey <a.i.harvey@icloud.com>"]
edition = "2021"
description = "A clipboard viewer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
egui = { git = "https://github.com/emilk/egui", branch = "master" }
eframe = { git = "https://github.com/emilk/egui", branch = "master", features = [
    "persistence",
    "dark-light",
] }
egui_extras = { git = "https://github.com/emilk/egui", branch = "master", features = [
    "image",
] }
image = { version = "0.24", features = ["jpeg", "png", "tiff"] }
serde = { version = "1.0.147", features = ["derive"] }
log = "0.4.17"
tracing-subscriber = "0.3.16"
pdf = "0.7.2"
libclipboard = { git = "https://github.com/a-isaiahharvey/libclipboard-rs", branch = "main" }
cfg-if = "1.0"


# macOS:
[target.'cfg(target_os = "macos")'.dependencies]
rust-macios = { version = "0.2.6", default-features = false, features = [
    "appkit",
] }


[profile.release]
opt-level = 2 # fast and small wasm


[patch.crates-io]

# If you want to use the bleeding edge version of egui and eframe:


# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }

[package.metadata.bundle]
name = "Clipboard Viewer"
identifier = "com.aiharvey.clipboardviewer"
icon = ["32x32.png", "128x128.png", "128x128@2x.png"]
version = "0.1.0"
resources = []
copyright = "Copyright (c) Allister Isaiah Harvey 2022. All rights reserved."
category = "Developer Tool"
short_description = "Inspect the system clipboard on various OSs"
long_description = """
This is a developer utility that allows you to inspect the various system clipboards.
"""
deb_depends = [
    "libxcb-render0-dev",
    "libxcb-shape0-dev",
    "libxcb-xfixes0-dev",
    "libspeechd-dev",
    "libxkbcommon-dev",
    "libssl-dev",
]
osx_frameworks = ["AppKit"]
